[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]

[node name="Canvas" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 5440.0
margin/bottom = 3200.0

[node name="NewGameButton" type="Button" parent="Canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 64.0
margin/right = 256.0
margin/bottom = 128.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false

[node name="LoadGameButton" type="Button" parent="Canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 160.0
margin/right = 256.0
margin/bottom = 224.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load Game"
flat = false

[node name="ExitButton" type="Button" parent="Canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 256.0
margin/right = 256.0
margin/bottom = 320.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[connection signal="pressed" from="Canvas/NewGameButton" to="Canvas" method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="Canvas/LoadGameButton" to="Canvas" method="_on_LoadGameButton_pressed"]

[connection signal="pressed" from="Canvas/ExitButton" to="Canvas" method="_on_ExitButton_pressed"]


